--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,13 +8,23 @@ services:
     env_file:
       - ./.env
 
+  redis:
+    image: redis
+    ports:
+      - '6379:6379'
+    depends_on:
+      - db
+
   web:
     build: .
     restart: always
+    links:
+      - redis
     volumes:
       - static_value:/code/static/
     depends_on:
       - db
+      - redis
     env_file:
       - ./.env
 
@@ -27,6 +37,7 @@ services:
       - static_value:/code/static/
     depends_on:
       - web
+
 
 volumes:
   postgres_data:
