--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,14 @@ click-repl==0.2.0
 colorama==0.4.5
 Deprecated==1.2.13
 Django==4.0.5
+django-celery-results==2.4.0
 google-api-core==2.8.1
 google-api-python-client==2.50.0
 google-auth==2.7.0
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.5.2
 googleapis-common-protos==1.56.2
+greenlet==1.1.2
 gunicorn==20.1.0
 httplib2==0.20.4
 idna==3.3
@@ -38,6 +40,7 @@ requests==2.28.0
 requests-oauthlib==1.3.1
 rsa==4.8
 six==1.16.0
+SQLAlchemy==1.4.39
 sqlparse==0.4.2
 tzdata==2022.1
 uritemplate==4.1.1
